Fix Form Interactivity on Mobile - Vanilla JS (cont.)

--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -64,6 +64,22 @@ input:-webkit-autofill {
     animation-duration: 0.001s;
 }
 
+// Mobile touch improvements
+@media (max-width: 768px) {
+    .labelToggle {
+        input, textarea, select {
+            -webkit-tap-highlight-color: transparent;
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -khtml-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+            touch-action: manipulation;
+        }
+    }
+}
+
 #section-1 {
     color:#333;
     background: #f3f3f3;
